@@ -1,4 +1,4 @@
-Processing module test_zope_interface (test/input/test_zope_interface.py)...
+Processing module test_zope_interface (input/test_zope_interface.py)...
 
 Warnings...
 
